--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0-rc.5",
     "axios": "^1.4.0",
     "pinia": "^2.0.36",
