--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0-rc.5",
     "axios": "^1.4.0",
+    "less": "^4.1.3",
+    "localforage": "^1.10.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
