--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^4.1.3",
     "localforage": "^1.10.0",
     "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
